# redis-streams-in-action

./: README.md
monitoring-app/: go.mod  host.json
monitoring-app/cmd/: main.go
monitoring-app/monitor/: function.json
tweets-consumer/: Cargo.toml  Dockerfile
tweets-consumer/src/: main.rs  tweet_model.rs
tweets-processor/: Dockerfile  pom.xml
tweets-processor/src/main/java/com/demo/azure/: StreamsConsumer.java
