[package]
name = "redis-streams-producer"
version = "0.1.0"
authors = ["abhishek <abhirockzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.20.0", features = ["tls","streams"] , default-features = false}
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }
#sse-client = "1.1.1"
futures = "0.3"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
twitter-stream = "*"
#ctrlc = "3.1.8"
